// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should close ConfirmModal correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="You want to remove this expense?"
  isOpen={false}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h3
    className="modal__title"
  >
    You want to remove this expense?
  </h3>
  <button
    className="button button--third"
    onClick={[Function]}
  >
    Yes
  </button>
  <button
    className="button button--third"
    onClick={[Function]}
  >
    No
  </button>
</Modal>
`;

exports[`should render ConfirmModal correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="You want to remove this expense?"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h3
    className="modal__title"
  >
    You want to remove this expense?
  </h3>
  <p
    className="modal__body"
  />
  <button
    className="button button--third"
    onClick={[Function]}
  >
    Yes
  </button>
  <button
    className="button button--third"
    onClick={[Function]}
  >
    No
  </button>
</Modal>
`;
